--- a/icg_project/style.css
+++ b/icg_project/style.css
@@ -107,6 +107,48 @@ The various units of measurement available in CSS:
 	border-radius: 0.5rem;
 }
 
+#wfc-overlay {
+	top: 1rem; 
+	left: 1rem;  
+	position: center; 
+	z-index: 3;
+	border-radius: 0.5rem;
+	background: rgb(131, 192, 149);
+	color: rgb(0, 0, 0);
+	font-size: 0;
+	overflow: hidden;
+}
+#wfc-overlay p{
+	margin: 30px;
+	padding: 0;
+}
+#text-wfc {
+	margin: 0.5rem;
+	font-size: large;
+	color: black;
+}
+
+#pos-tiles {
+	color: black;
+	padding: 40px;
+	text-align: center;
+	line-height: 0;
+}
+
+#img-tiles {
+	color: black;
+	padding: 40px;
+	text-align: center;
+	line-height: 0;
+}
+
+#generate {
+	color: black;
+	padding: 40px;
+	text-align: center;
+	font-size: large;
+}
+
 .keyboard {
 	border:1px white solid; 
 	padding: 0 0.25em 0 0.25em;
@@ -114,4 +156,57 @@ The various units of measurement available in CSS:
 
 .hidden {
 	display: none;
+}
+
+.button {
+	background-color: white;
+	border: none;
+	border-radius: 2%;
+	color: white;
+	text-align: center;
+	font-size: 30px;
+	cursor: pointer;
+	margin: 0;
+}
+.but1 {
+	background-color: white;
+	color: black;
+	width: 50px;
+	height: 50px;
+	font-size: 15px;
+	border: 2px solid rgb(67, 105, 78);
+}
+.but3 {
+	background-color: white;
+	color: black;
+	padding: 10px 10px;
+	font-size: 15px;
+	border: 2px solid rgb(67, 105, 78);
+}
+.but1:hover, .but3:hover {
+	background-color: rgb(67, 105, 78);;
+	color: white;
+}
+.but1:focus, .but3:focus {
+	background-color: rgb(67, 105, 78);;
+	color: white;
+}
+.but2 {
+	background-color: white;
+	color: black;
+	border: 2px solid rgb(255, 231, 160);
+}
+
+.but2:hover {
+	background-color: rgb(255, 231, 160);;
+	color: white;
+}
+.but2:focus {
+	background-color: rgb(255, 231, 160);;
+	color: white;
+}
+
+img {
+	width: 60px;
+	height: 60px;
 }
